--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,6 +1,8 @@
 {{#if loggedIn}}
 <h5>Welcome {{user_name}}!</h5>
 {{else}}
-<h1>Welcome to Invoice Manager</h1>
+<h1 style="margin-left: 450px;padding-top:100px;font-family: 'Abril Fatface', cursive;;">Welcome to Invoice Manager</h1>
+<img style="width:1000px;height:500px;margin-left: 250px;border:1px;border-style:solid;" src="https://blog.tenderboard.biz/wp-content/uploads/2020/06/Invoicing-made-simpler-with-Invoice-Management-System.png"></img>
+
 {{/if}}
 
