--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,44 +1,25 @@
+
 <div class="row">
-  <div class="col-md-6">
-    <h2>Login</h2>
+  <div style="height: 400px;width:500px;border-width:2px;border-style:solid;margin-left:500px;margin-top:150px;background-color:#a39484" col-md-6>
+    <h2 style="font-family: 'Abril Fatface', cursive;font-size:30px;margin-left:200px;margin-top:20px;">Login</h2>
     <form class="form login-form">
       <div class="form-group">
-        <label for="email-login">email:</label>
-        <input class="form-input" type="text" id="email-login" />
+        <label for="email-login">Email:<input class="form-input" type="text" id="email-login" /></label>
+        
       </div>
       <div class="form-group">
         <label for="password-login">password:</label>
         <input class="form-input" type="password" id="password-login" />
       </div>
       <div class="form-group">
-        <button class="btn btn-primary" type="submit">login</button>
+        <button style=" background-color: black;color:aliceblue"class="btn" type="submit">login</button>
+      </div>
+      <div class="form-group">
+        <h3>Dont have login id?</h3><button style=" background-color: black;color:aliceblue" class="btn" type="submit"><h3 style="font-size: large;"><span><a style="color:white;font-weight:bold;" href="/signup" class="nav-link active  align-middle px-0">Signup</a></span></h3></button>
       </div>
     </form>
   </div>
 
-
-  <div class="col-md-6">
-    <h2>Signup</h2>
-
-    <form class="form signup-form">
-      <div class="form-group">
-        <label for="name-signup">name:</label>
-        <input class="form-input" type="text" id="name-signup" />
-      </div>
-      <div class="form-group">
-        <label for="email-signup">email:</label>
-        <input class="form-input" type="text" id="email-signup" />
-      </div>
-      <div class="form-group">
-        <label for="password-signup">password:</label>
-        <input class="form-input" type="password" id="password-signup" />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">signup</button>
-      </div>
-    </form>
-
-  </div>
 </div>
 
 <script src="/js/login.js"></script>
