added new styles

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,21 +3,23 @@
 
 <head>
   <style>
-.bg-image{
-background-color: #a39484;
-height: 100vh;
-width:100%
+    .bg-image {
+      background-color: #a78663;
+      height: 100vh;
+      width: 100%
+    }
 
-}
-.btn-primary{
-  background-color: black;
-}
-.navbar{
-  background-color: #2d545e;
-}
-.nav-item{
-  background-color: #2d545e;
-}
+    .btn-primary {
+      background-color: black;
+    }
+
+    .navbar {
+      background-color: #2d545e;
+    }
+
+    .nav-item {
+      background-color: #2d545e;
+    }
   </style>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -32,20 +34,57 @@ width:100%
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
 </head>
 
 <body>
-
+  {{#if loggedIn}}
   <header class="navbar">
-      <div class="container-fluid text-light">
-        <span style="font-family: 'Abril Fatface', cursive;font-size:30px;"class="navbar-brand mb-0 h1  text-light fw-bold">Invoice Manager+</span>
-       <button class="btn btn-primary"style="background-color:#2d545e;border-radius: 15px;border-color: white; "> <h3 style="font-size:30px;font-family: 'Abril Fatface', cursive;"><span><a style="color:white;font-weight:bold;" href="/login" class="nav-link active  align-middle px-0">Login</a></span></h3></button>
-        </header>
-  <main class="bg-image" id="main-render"
-            >
+    <div class="container-fluid text-light">
+      <span class="navbar-brand mb-0 h1  text-light fw-bold">Invoice Manager+</span>
+      <ul class="nav">
+        <li class="nav-item text-white  p-3">
+          <a class="nav-link active text-light" aria-current="page" href="/api/invoices/new">New Invoice</a>
+        </li>
+        <li class="nav-item text-white  p-3">
+          <a class="nav-link active text-light" aria-current="page" href="/api/invoices/">Manage Invoices</a>
+        </li>
+        <li class="nav-item text-white p-3">
+          <a class="nav-link active text-light" aria-current="page" href="/api/clients/">Manage Client</a>
+        </li>
+        <li class="nav-item text-white  p-3" id="newclient">
+          <a class="nav-link active text-light" aria-current="page" href="/api/clients/new">Add Client</a>
+        </li>
+        <li class="nav-item text-white  p-3">
+          {{#if loggedIn}}
+          <button id="logout" class="btn-hover color-1">Logout</button>
+          {{!-- <button class=" btn-no-style nav-link active text-warning " aria-current="page"
+            id="logout-nav">Logout</button> --}}
+          {{else}}
+
+
+          <a href="/login" class="nav-link active text-warning align-middle px-0">Login</a>
+          {{/if}}
+        </li>
+
+      </ul>
+    </div>
+  </header>
+
+  {{else}}
+  <header class="navbar">
+    <div class="container-fluid text-light">
+      <span style="font-family: 'Abril Fatface', cursive;font-size:30px;"
+        class="navbar-brand mb-0 h1  text-light fw-bold">Invoice Manager+</span>
+      <button class="btn-hover color-1" style="background-color:#2d545e;border-radius: 15px;border-color: white; ">
+        <h3 style="font-size:30px;font-family: 'Abril Fatface', cursive;"><span><a style="color:white;font-weight:bold;"
+              href="/login" class="nav-link active  align-middle px-0">Login</a></span></h3>
+      </button>
+  </header>
+  {{/if}}
+  <main class="bg-image" id="main-render">
     <!-- Render the sub layout -->
     {{{ body }}}
   </main>
