--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,7 +1,7 @@
+
 * {
     padding: 0px;
 }
-
 h1 {
     padding: .45em;
     margin: 0;
@@ -10,12 +10,12 @@ h1 {
 
 .login-form {
     width: 340px;
-    margin: 50px auto;
+    /* margin-left: 600px; */
 }
 
 .login-form form {
     margin-bottom: 15px;
-    background-image: linear-gradient(109.6deg, rgba(156, 252, 248, 1) 11.2%, rgba(110, 123, 251, 1) 91.1%);
+    /* background-image: linear-gradient(109.6deg, rgba(156, 252, 248, 1) 11.2%, rgba(110, 123, 251, 1) 91.1%); */
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
     padding: 30px;
 }
@@ -83,7 +83,7 @@ th {
 }
 
 th {
-    background-color: rgb(61, 211, 241);
+    /* background-color: rgb(61, 211, 241); */
 }
 
 tr:nth-child(even) {
@@ -127,3 +127,63 @@ btn-no-style {
     margin-left: 16px;
   }
 
+.animate-charcter {
+    text-transform: uppercase;
+    background-image: linear-gradient(-225deg,
+            #231557 0%,
+            #0d1618 29%,
+            #263335 67%,
+            #616158 100%);
+    background-size: auto auto;
+    background-clip: border-box;
+    /* background-size: 200% auto; */
+    color: #fff;
+    background-clip: text;
+    /* text-fill-color: transparent; */
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: textclip 2s linear infinite;
+    display: inline-block;
+    font-size: 50px;
+}
+
+@keyframes textclip {
+    to {
+        background-position: 200% center;
+    }
+}
+.btn-hover {
+    width: 200px;
+    font-size: 16px;
+    font-weight: 600;
+    color: #fff;
+    cursor: pointer;
+    margin: 20px;
+    height: 55px;
+    text-align: center;
+    border: none;
+    background-size: 300% 100%;
+
+    border-radius: 50px;
+    moz-transition: all .4s ease-in-out;
+    -o-transition: all .4s ease-in-out;
+    -webkit-transition: all .4s ease-in-out;
+    transition: all .4s ease-in-out;
+}
+
+.btn-hover:hover {
+    background-position: 100% 0;
+    /* moz-transition: all .4s ease-in-out; */
+    -o-transition: all .4s ease-in-out;
+    -webkit-transition: all .4s ease-in-out;
+    transition: all .4s ease-in-out;
+}
+
+.btn-hover:focus {
+    outline: none;
+}
+
+.btn-hover.color-1 {
+    background-image: linear-gradient(to right, #8799a9, #2d545e, #a78663, #2d5341);
+    box-shadow: 0 4px 15px 0 #664d03;
+}
