--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,26 +1,26 @@
-
 <div class="row">
-<div class="col-md-6">
-    <h2>Signup</h2>
+    <div style="height: 400px;width:500px;border-width:2px;border-style:solid;margin-left:500px;margin-top:150px;background-color:#a39484"
+        col-md-6>
+        <h2 style="font-family: 'Abril Fatface', cursive;font-size:30px;margin-left:200px;margin-top:20px;">Signup</h2>
 
-    <form class="form signup-form">
-        <div class="form-group">
-            <label for="name-signup">name:</label>
-            <input class="form-input" type="text" id="name-signup" />
-        </div>
-        <div class="form-group">
-            <label for="email-signup">email:</label>
-            <input class="form-input" type="text" id="email-signup" />
-        </div>
-        <div class="form-group">
-            <label for="password-signup">password:</label>
-            <input class="form-input" type="password" id="password-signup" />
-        </div>
-        <div class="form-group">
-            <button class="btn btn-primary" type="submit">signup</button>
-        </div>
-    </form>
+        <form class="form signup-form">
+            <div class="form-group">
+                <label for="name-signup">name:</label>
+                <input class="form-input" type="text" id="name-signup" />
+            </div>
+            <div class="form-group">
+                <label for="email-signup">email:</label>
+                <input class="form-input" type="text" id="email-signup" />
+            </div>
+            <div class="form-group">
+                <label for="password-signup">password:</label>
+                <input class="form-input" type="password" id="password-signup" />
+            </div>
+            <div class="form-group">
+                <button style=" background-color: black;color:aliceblue" class="btn" type="submit">signup</button>
+            </div>
+        </form>
 
-</div>
+    </div>
 </div>
 <script src="/js/signin.js"></script>
